# cc

./: CMakeLists.txt
core/: CMakeLists.txt  api.h  ast.cc  ast.h  codegen.cc  codegen.h  expr.cc  expr.h  ir.cc  ir.h  reader.cc  reader.h  version.h
examples/: add.c  add.s  add.sm
tests/: CMakeLists.txt  test_ast.cc  test_call.cc  test_codegen.cc  test_gettok.cc  test_vm.cc
